// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Snapshots with a title matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
  preamble="heres the preamble"
  title="title"
>
  <!---->
   
  <div
    class="PageHeader-text"
  >
    <!---->
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <navigationcontainer-stub />
</header>
`;

exports[`PageHeader Snapshots with inline svg matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
  preamble="heres the preamble"
  title="title"
>
  <div
    class="PageHeader-background"
  >
    <div
      class="PageHeader-media"
    >
      <svg>
        <g>
          <path />
        </g>
      </svg>
    </div>
  </div>
   
  <div
    class="PageHeader-text"
  >
    <!---->
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <navigationcontainer-stub />
</header>
`;

exports[`PageHeader Snapshots without a title matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
  preamble="heres the preamble"
>
  <!---->
   
  <div
    class="PageHeader-text"
  >
    <!---->
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <navigationcontainer-stub />
</header>
`;
